--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,32 @@
     <link rel="stylesheet" href="../src/input.css">
     <link href="/dist/output.css" rel="stylesheet">
     <script defer src="../src/index.js"></script>
-
-
 </head>
 
 <body>
-    <h1 class="text-3xl text-cyan-200 font-bold underline">
+    <h1 class="text-3xl font-bold underline">
 
-    Hello World</h1>
+    Color Scheme Generator
+    </h1>
+    <main class="bg-slate-700">
+        <form action="" class="flex flex">
+            <input type="color" name="" id="">
+            <button class="rounded-s-*">Create Color Scheme</button>
+        </form>
+        <div id="scheme_container">
+            <div>example</div>
+            <div>example</div>
+            <div>example</div>
+            <div>example</div>
+            <div>example</div>
+            <div>example</div>
+        </div>
+    </main>
+    <footer >
+        <h2 class="text-3xl text-cyan-200 font-bold underline">
+            Designed With Love by Pilks-Pixel
+        </h2>
+    </footer>
 </body>
 
 </html>
