--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-    <h1 class="text-3xl font-bold underline">
+    <h1 class="text-3xl font-display font-bold">
 
     Color Scheme Generator
     </h1>
-    <main class="bg-slate-700">
-        <form action="" class="flex flex">
+    <main class="bg-slate-300">
+        <form action="" class="max-w-md mt-0 mb-4 mx-[auto] p-4 border-2 border-slate-900 flex">
             <input type="color" name="" id="">
             <button class="rounded-s-*">Create Color Scheme</button>
         </form>
@@ -30,7 +30,7 @@
         </div>
     </main>
     <footer >
-        <h2 class="text-3xl text-cyan-200 font-bold underline">
+        <h2 class="text-base text-rose-400 font-bold">
             Designed With Love by Pilks-Pixel
         </h2>
     </footer>
