--- a/src/index.html
+++ b/src/index.html
@@ -16,17 +16,22 @@
     Color Scheme Generator
     </h1>
     <main class="bg-slate-300">
-        <form action="" class="max-w-md mt-0 mb-4 mx-[auto] p-4 border-2 border-slate-900 flex">
-            <input type="color" name="" id="">
-            <button class="rounded-s-*">Create Color Scheme</button>
+        <form id="colorForm" class="max-w-md mt-0 mb-4 mx-[auto] p-4 border-2 border-slate-900 flex justify-between">
+            <input type="color" name="seedColor" id="seedColor">
+            <select name="mode" id="mode">
+                <option value="monochrome">monochrome</option>
+                <option value="monochrome-light">monochrome-light</option>
+                <option value="monochrome-dark">monochrome-dark</option>
+                <option value="analogic">analogic</option>
+                <option value="complement">complement</option>
+                <option value="analogic-complement">analogic-complement</option>
+                <option value="triad">triad</option>
+                <option value="quad">quad</option>
+            </select>
+            <button id="submitBtn" class="px-3 py-1 bg-slate-500 rounded-full">Get Color Scheme</button>
         </form>
         <div id="scheme_container">
-            <div>example</div>
-            <div>example</div>
-            <div>example</div>
-            <div>example</div>
-            <div>example</div>
-            <div>example</div>
+            
         </div>
     </main>
     <footer >
