--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Picker</title>
-    <link rel="stylesheet" href="../src/input.css">
+    <link rel="stylesheet" href="./input.css">
     <link href="/dist/output.css" rel="stylesheet">
-    <script defer src="../src/index.js"></script>
+    <script defer src="./index.js"></script>
 </head>
 
 <body>
